# AssistGen

./: .env.example  .gitignore  README.md  pyproject.toml
llm_backend/: main.py  run.py
llm_backend/app/api/: auth.py
llm_backend/app/core/: config.py  database.py  hashing.py  logger.py  security.py
llm_backend/app/lg_agent/: lg_builder.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/cypher_tools/: node.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/planner/: node.py  prompts.py
llm_backend/app/lg_agent/kg_sub_graph/agentic_rag_agents/components/tool_selection/: node.py
llm_backend/app/models/: user.py
llm_backend/app/schemas/: user.py
llm_backend/app/services/: conversation_service.py  deepseek_service.py  embedding_service.py  llm_factory.py  ollama_service.py  rag_chat_service.py  rag_service.py  search_service.py  user_service.py
llm_backend/indexes/: docs_413f12add82f895b6d6d6a6e50d4a25f.json  docs_cb6d312da08f181248ac46cdc8fc8755.json
